# PriceLess

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/errors/: AppError.ts
backend/src/routes/: users.ts  (+4 more)
client/: .env  package-lock.json  package.json  tailwind.config.cjs
client/src/: App.tsx  index.css  main.tsx
contracts/: .env
contracts/interaction/: 00.migrate_platform_registry.ts  00.mint_ron.ts  00.set_fee_percentages.ts  01.register_agent.ts  03.create_shop.ts  04.register_user.ts  05.create_buy_offer_price_based.ts  06.modify_buy_offer.ts  07.cancel_buy_offer.ts  08.make_sell_offer.ts  09.manual_buy.ts  10.DEMO_SELL_OFFER.ts  mint_ron.ts  register_agent.ts
contracts/priceless/: Move.toml
contracts/ron/: Move.toml  README.md
contracts/sui_contract/: Move.toml
events-indexer/: .env  .env.example  Cargo.toml  README.md
events-indexer/migrations/2025-11-15-092309_agent/: down.sql  up.sql
events-indexer/migrations/2025-11-15-121434_user/: up.sql
events-indexer/migrations/2025-11-15-123607_buy_offer/: down.sql  up.sql
events-indexer/migrations/2025-11-15-124123_sell_offer/: down.sql  up.sql
events-indexer/migrations/2025-11-15-132626_manual_buy/: down.sql  up.sql
events-indexer/migrations/2025-11-15-153417_shop_purchase/: down.sql  up.sql
events-indexer/migrations/2025-14-11-172309_agent/: up.sql
events-indexer/src/: agent.rs  config.rs  handlers.rs  lib.rs  main.rs  schema.rs
(+59 files in other folders)
