[package]
name = "events-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.61"
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"
diesel = { version = "2.2", features = ["postgres", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
diesel_migrations = "2.2"
diesel-async = "0.5"
tokio = "1.43.0"
url = "2.3.1"
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
bcs = "0.1"

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.57.0" }
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.57.0" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.57.0" }
